--- a/MenuBI/app/build.gradle
+++ b/MenuBI/app/build.gradle
@@ -21,28 +21,13 @@ android {
 
 
 dependencies {
-    /* androidTestImplementation(
-            'com.android.support.test.espresso:espresso-core:2.2.2', {
-                exclude group:'com.android.support', module:'support-annotations'
-            }
-    )*/
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'com.android.support:appcompat-v7:29.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.firebase:firebase-database:16.0.4'
-    implementation 'info.hoang8f:fbutton:1.0.5'
-    implementation 'com.google.firebase:firebase-core:16.0.4'
-    implementation 'com.android.support:cardview-v7:29.0.1'
-    implementation 'com.android.support:cardview-v7:29.0.1'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.firebaseui:firebase-ui-database:1.2.0'
-
-
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:+'
-    implementation 'androidx.navigation:navigation-fragment:2.2.0'
-    implementation 'androidx.navigation:navigation-ui:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'info.androidhive:fontawesome:0.0.5'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
 apply plugin: 'com.google.gms.google-services'
