--- a/MenuBI/app/src/main/AndroidManifest.xml
+++ b/MenuBI/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.menubi">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -11,12 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".Home"
-            android:label="@string/title_activity_home"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".Signup" />
-        <activity android:name=".Signin" />
+        <activity android:name=".ModifierPlat"></activity>
+        <activity android:name=".ListePlat" />
+        <activity android:name=".SupprimerPlat" />
+        <activity android:name=".AjoutePlat" />
+        <activity android:name=".AdminDashbord" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
