--- a/MenuBI/app/build.gradle
+++ b/MenuBI/app/build.gradle
@@ -32,7 +32,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-database:16.0.4'
     implementation 'info.hoang8f:fbutton:1.0.5'
-<<<<<<< HEAD
     /*implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'info.hoang8f:fbutton:1.0.5'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
@@ -42,7 +41,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-=======
     implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.android.support:cardview-v7:29.0.1'
     implementation 'com.android.support:cardview-v7:29.0.1'
@@ -55,6 +53,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.2.0'
     implementation 'androidx.navigation:navigation-ui:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
->>>>>>> 40955f6a467f7348e25537576e8a7854f9f8b01c
+    implementation 'com.google.android.material:material'
 }
 apply plugin: 'com.google.gms.google-services'
