--- a/MenuBI/app/src/main/AndroidManifest.xml
+++ b/MenuBI/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.menubi">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
 
     <application
         android:allowBackup="true"
@@ -11,13 +13,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PageGuide"></activity>
+        <activity android:name=".Test"></activity>
+        <activity android:name=".PageGuide" />
         <activity
             android:name=".Home"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Signup" />
         <activity android:name=".Signin" />
+        <activity android:name=".ModifierPlat"></activity>
+        <activity android:name=".ListePlat" />
+        <activity android:name=".SupprimerPlat" />
+        <activity android:name=".AjoutePlat" />
+        <activity android:name=".AdminDashbord" />
+
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
