--- a/MenuBI/app/build.gradle
+++ b/MenuBI/app/build.gradle
@@ -10,6 +10,8 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+
     }
     buildTypes {
         release {
@@ -43,6 +45,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.android.support:cardview-v7:29.0.1'
+    implementation 'com.android.support:recyclerview-v7:29.0.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.firebaseui:firebase-ui-database:1.2.0'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
