--- a/MenuBI/app/build.gradle
+++ b/MenuBI/app/build.gradle
@@ -39,18 +39,22 @@ dependencies {
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
         implementation 'androidx.cardview:cardview:1.0.2'
 */
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.android.support:cardview-v7:29.0.1'
+    implementation 'com.android.support:design:29.0.1'
+    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
     implementation 'com.android.support:recyclerview-v7:29.0.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.firebaseui:firebase-ui-database:1.2.0'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
 
-
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     implementation 'com.google.android.material:material:+'
     implementation 'androidx.navigation:navigation-fragment:2.2.0'
     implementation 'androidx.navigation:navigation-ui:2.2.0'
