--- a/MenuBI/app/src/main/AndroidManifest.xml
+++ b/MenuBI/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Cart"></activity>
+        <activity android:name=".IntroActivity"></activity>
+        <activity android:name=".Cart" />
         <activity android:name=".DetailsPlats" />
         <activity android:name=".Test" />
         <activity android:name=".PageGuide" />
