--- a/MenuBI/app/build.gradle
+++ b/MenuBI/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
 
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    implementation 'com.stepstone.apprating:app-rating:2.0.0'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     implementation 'com.google.android.material:material:+'
     implementation 'androidx.navigation:navigation-fragment:2.2.0'
